--- a/public/css/application.css
+++ b/public/css/application.css
@@ -51,3 +51,9 @@ body {
 	color: #FFC700;
 	margin-bottom: 1em;
 }
+#console span.help {
+  background-color: #F7F7F7;
+  border-bottom: 1px solid #EBEBEB;
+  border-radius: 2px;
+  padding: 5px;
+}
